Java/neha/1/err.txt
1.c: In function ‘main’:
1.c:6:1: error: expected ‘;’ before ‘return’
 return 0;
 ^
